# fastapi-test

./: .dockerignore  README.md  pyproject.toml
app/: main.py
